# Crosscompiled-Windows-installer

./: CMakeLists.txt  README.md  wxmaxima-installerimage.xcf
.github/workflows/: compile_ubuntu.yml
wxmaxima/: CMakeLists.txt
wxwidgets/: CMakeLists.txt
